# academic-research-mcp

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  _orphan_watchdog.py  arxiv_client.py  cache.py  crossref_client.py  db.py  formatters.py  google_scholar_client.py  google_scholar_web_search.py  http_client.py  medrxiv_client.py  openalex_client.py  orchestrator.py  orcid_client.py  pubmed_client.py  pyproject.toml  requirements.txt  review_manager.py  semantic_scholar_client.py  server.py  unpaywall_client.py  utils.py
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-10-systematic-review-features.md
docs/superpowers/specs/: 2026-04-10-systematic-review-features-design.md
dxt/: academic-research-mcp.dxt  manifest.json
game-design/: changelog-v1-to-v2.md  review-accessibility.md  review-mechanics.md  review-playtest.md  review-sensitivity.md  review-theme.md  review_history.md  review_mechanics.md  review_narrative.md  review_redteam.md  review_sensitivity.md  v1-crescent.md  v1_design.md  v2-crescent.md
ios-app/: project.yml
ios-app/AcademicResearch/: AcademicResearchApp.swift  ContentView.swift  Info.plist
ios-app/AcademicResearch/Models/: Author.swift  ChatMessage.swift  Paper.swift  SearchState.swift
ios-app/AcademicResearch/Services/: APIClient.swift  AnthropicService.swift  OpenAlexService.swift  PubMedService.swift  SemanticScholarService.swift  ToolDefinitions.swift  ToolExecutor.swift
ios-app/AcademicResearch/ViewModels/: AuthorViewModel.swift  BookmarksViewModel.swift  ChatViewModel.swift  PaperDetailViewModel.swift  SearchViewModel.swift
ios-app/AcademicResearch/Views/: AuthorDetailView.swift  AuthorSearchView.swift  BookmarksView.swift  ChatView.swift  PaperDetailView.swift  (+2 more)
tests/: conftest.py  test_db.py  test_prisma_counts.py  test_pubmed_client.py  test_review_manager.py  test_snowball.py  test_utils_and_orchestrator.py
(+3 files in other folders)
